[YMCA-1800] Integrate Lily theme with existing functionality

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/style.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/style.scss
@@ -24,9 +24,9 @@
 @import 'modules/program';
 @import 'modules/branch';
 @import 'modules/slick';
-@import 'modules/blog';
+/*@import 'modules/blog';*/
 @import 'modules/class';
-@import 'modules/schedules';
+/*@import 'modules/schedules';*/
 @import 'modules/dialog';
 @import 'modules/landing';
 @import 'modules/membership';
@@ -73,8 +73,8 @@
 @import 'misc/node-preview';
 @import 'misc/search';
 @import 'misc/program';
-@import 'misc/news';
-@import 'misc/blog';
+/*@import 'misc/news';*/
+/*@import 'misc/blog';*/
 @import 'misc/sidebar';
 @import 'misc/wysiwyg';
 @import 'global/openy-lily-styles';
