--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/node/node--location--full.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/node/node--location--full.html.twig
@@ -80,17 +80,7 @@
     <section class="messages">
     </section>
     <div class="row features">
-      <div class="col-sm-push-6 col-md-push-7 col-sm-offset-1 col-md-4 col-sm-5 call-to-action lead right">
-        <article class="richtext" id="component_180969">
-          {{ content.field_camp_links }}
-        </article>
-
-      </div>
-      <div class="col-sm-pull-6 col-md-pull-5 col-md-7 col-sm-6 lead">
-        <article class="richtext" id="component_180968">
-          {{ content.field_ygtc_content }}
-        </article>
-      </div>
+      {% include "@ymca/layout/node/node-location-lead.html.twig" %}
     </div>
   </div>
 </section>
