--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/node/node--location--schedules.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/node/node--location--schedules.html.twig
@@ -74,74 +74,26 @@
   ]
 %}
 {{ attach_library('classy/node') }}
-
-<section class="locations-page-under-lead-copy lead-copy">
-  <div class="container">
-    <section class="messages">
-    </section>
-    <div class="row features">
-      <div class="col-sm-push-6 col-md-push-7 col-sm-offset-1 col-md-4 col-sm-5 call-to-action lead right">
-        <article class="richtext" id="component_180969">
-          {{ content.field_camp_links }}
-        </article>
-
-      </div>
-      <div class="col-sm-pull-6 col-md-pull-5 col-md-7 col-sm-6 lead">
-        <article class="richtext" id="component_180968">
-          {{ content.field_ygtc_content }}
-        </article>
-      </div>
-    </div>
-  </div>
-</section>
+{#{{ attach_library('ymca_alters/schedules_date') }}#}
 
 <hr>
-
-<section{{ attributes.addClass(classes) }}>
+<section class="content">
   <div class="container">
     <section class="messages">
     </section>
     <div class="row">
-      <section class="main-promos promos even-heights">
-        {{ content.field_main_promos }}
-      </section>
+      <div class="left col-sm-6">
+        <article class="richtext">
+          <h2>Group Exercise Classes</h2>
+          {{ form_find_classes }}
+        </article>
+      </div>
+      <div class="right col-sm-6">
+        <article class="richtext location-schedules-content">
+          {{ content.field_schedule_content }}
+          {{ content.field_schedule_block }}
+        </article>
+      </div>
     </div>
   </div>
 </section>
-
-{% if news_events or fb_id %}
-<section class="social">
-  <div class="container">
-    <div class="row">
-      {% if news_events %}
-      <div class="col-sm-7">
-        <h2>{{ 'News &amp; Events'|t }}</h2>
-        <div id="excerpt-source">
-          {{ news_events }}
-        </div>
-      </div>
-      {% endif %}
-      {% if fb_id %}
-      <div class="col-sm-5">
-        {# Facebook Likebox initialisation code. #}
-        <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1382702231950329";
-            fjs.parentNode.insertBefore(js, fjs);
-          }(document, 'script', 'facebook-jssdk'));
-        </script>
-        <h2>{{ 'On Facebook'|t }}</h2>
-        <div class="fb-page" data-href="https://www.facebook.com/{{ fb_id }}" data-width="500" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="true">
-          <div class="fb-xfbml-parse-ignore">
-            <blockquote cite="https://www.facebook.com/{{ fb_id }}"><a href="https://www.facebook.com/{{ fb_id }}">{{ label }}</a></blockquote>
-          </div>
-        </div>
-      </div>
-      {% endif %}
-    </div>
-  </div>
-</section>
-{% endif %}
