[YMCA-1805] Create a new layout 3 columns

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/node/node--landing-page--full.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/node/node--landing-page--full.html.twig
@@ -120,4 +120,9 @@
   {% include "@openy_lily/node/include/node--landing-page--two-columns-left.html.twig" %}
 {% endif %}
 
+{# Three columns #}
+{% if node.field_lp_layout.value == "three_columns"%}
+    {% include "@openy_lily/node/include/node--landing-page--three-columns.html.twig" %}
+{% endif %}
+
 {{ content.field_bottom_content }}
