--- a/docroot/themes/custom/ymca/sass/paragraphs/sidebar-menu.scss
+++ b/docroot/themes/custom/ymca/sass/paragraphs/sidebar-menu.scss
@@ -33,7 +33,7 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
-      font-family: 'Cachet', Helvetica, Arial, sans-serif;
+      font-family: 'Cachet', Verdana, Arial, sans-serif;
       font-size: 20px;
       border-bottom: 5px solid #000;
       &:hover,
@@ -56,7 +56,7 @@
     display: block;
     padding: 10px 15px;
     font-size: 18px;
-    font-family: 'Cachet', Helvetica, Arial, sans-serif;
+    font-family: 'Cachet', Verdana, Arial, sans-serif;
     text-decoration: none;
     font-weight: bold;
     color: #428bca;
