--- a/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
@@ -533,7 +533,7 @@
     }
     .fc-day-top,
     .fc-day-number {
-      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-family: Verdana,Arial,sans-serif;
       font-size: 22px;
       letter-spacing: -0.6px;
       text-align: left;
