--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/page/page.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/page/page.html.twig
@@ -177,5 +177,16 @@
       </a>
     </div>{# /.return-to-top #}
   </div>{# /.viewport #}
-
+  <div id="modal" class="modal fade">
+    <div class="modal-cover"></div>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="modal-close"><i class="glyphicon glyphicon-remove" data-dismiss="modal" aria-hidden="true"></i></span>
+          <div id="modal-title" class="modal-title"></div>
+        </div>
+        <div id="modal-body" class="modal-body"></div>
+      </div>
+    </div>
+  </div>
 </div>{# /.layout-container #}
