Fix news page styling

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -35,7 +35,8 @@
     width: auto;
   }
 }
-.path-locations {
+.path-locations,
+.path-news {
   .container, .padded-content-container {
     padding: 0 30px;
     max-width: none;
