--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -14497,13 +14497,21 @@ body.modal-open {
   width: auto;
 }
 
-.path-locations .container, .path-locations .path-account .status-message, .path-account .path-locations .status-message, .path-locations .padded-content-container {
+.path-locations .container, .path-locations .path-account .status-message, .path-account .path-locations .status-message, .path-locations .padded-content-container,
+.path-news .container,
+.path-news .path-account .status-message,
+.path-account .path-news .status-message,
+.path-news .padded-content-container {
   padding: 0 30px;
   max-width: none;
   width: auto;
 }
 @media (min-width: 1200px) {
-  .path-locations .container, .path-locations .path-account .status-message, .path-account .path-locations .status-message, .path-locations .padded-content-container {
+  .path-locations .container, .path-locations .path-account .status-message, .path-account .path-locations .status-message, .path-locations .padded-content-container,
+  .path-news .container,
+  .path-news .path-account .status-message,
+  .path-account .path-news .status-message,
+  .path-news .padded-content-container {
     padding-right: 100px;
     padding-left: 100px;
   }
