--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -14658,4 +14658,68 @@ section.content {
   display: none;
 }
 
+.paragraph--type--sidebar-menu {
+  background: #e0e0e0;
+  margin: 0 0 20px;
+}
+.paragraph--type--sidebar-menu .panel-body {
+  padding: 0 15px;
+}
+.paragraph--type--sidebar-menu .dropdown .nav {
+  display: none;
+}
+.paragraph--type--sidebar-menu .dropdown.open {
+  background: #f5f5f5;
+  border-top: 5px solid #000;
+}
+.paragraph--type--sidebar-menu .dropdown.open > a {
+  margin-top: -5px;
+  border-top: 5px solid #000;
+  background-color: transparent;
+  color: #428bca;
+}
+.paragraph--type--sidebar-menu .dropdown.open ul a {
+  font-weight: normal;
+  color: #428bca;
+  font-size: 13px;
+  line-height: 20px;
+  text-transform: none;
+  position: relative;
+  display: block;
+  padding: 10px 15px 10px 25px;
+}
+.paragraph--type--sidebar-menu .dropdown.open .current a {
+  color: #333;
+}
+.paragraph--type--sidebar-menu .dropdown.open .current a:after {
+  position: absolute;
+  top: 50%;
+  right: 12px;
+  margin-top: -11px;
+  color: gray;
+  content: '>';
+  font-family: 'YMCA';
+}
+.paragraph--type--sidebar-menu .dropdown.open .nav {
+  display: block;
+}
+.paragraph--type--sidebar-menu .panel-heading {
+  padding: 13px 15px;
+  border-radius: 0;
+  background: #434343;
+  color: white;
+}
+.paragraph--type--sidebar-menu .panel-heading .panel-title {
+  font-size: 20px;
+}
+.paragraph--type--sidebar-menu .panel-heading .panel-title a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+.paragraph--type--sidebar-menu .nav-level-3 > li {
+  font-weight: bold;
+}
+
 /*# sourceMappingURL=style.css.map */
