--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -183,3 +183,69 @@ section.content {
 .full-width-background-image > img {
   display: none;
 }
+
+.paragraph--type--sidebar-menu {
+  background: #e0e0e0;
+  margin: 0 0 20px;
+  .panel-body {
+    padding: 0 15px;
+  }
+  .dropdown {
+    .nav {
+      display: none;
+    }
+    &.open {
+      background: #f5f5f5;
+      border-top: 5px solid #000;
+      > a {
+        margin-top: -5px;
+        border-top: 5px solid #000;
+        background-color: transparent;
+        color: #428bca;
+      }
+      ul a {
+        font-weight: normal;
+        color: #428bca;
+        font-size: 13px;
+        line-height: 20px;
+        text-transform: none;
+        position: relative;
+        display: block;
+        padding: 10px 15px 10px 25px;
+      }
+      .current a {
+        color: #333;
+        &:after {
+          position: absolute;
+          top: 50%;
+          right: 12px;
+          margin-top: -11px;
+          color: gray;
+          content: '>';
+          font-family: 'YMCA';
+        }
+      }
+      .nav {
+        display: block;
+      }
+    }
+  }
+  .panel-heading {
+    padding: 13px 15px;
+    border-radius: 0;
+    background: #434343;
+    color: white;
+    .panel-title {
+      font-size: 20px;
+      a {
+        display: block;
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+      }
+    }
+  }
+  .nav-level-3 > li {
+    font-weight: bold;
+  }
+}
