[YMCA-1823] Fix theming for Personal training functionality

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -6,6 +6,8 @@
 @import 'camp_du_nord';
 @import 'modal';
 @import 'membership';
+@import 'mindbody';
+@import 'icomoon';
 
 /* Give page */
 .path-give {
