--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -15428,7 +15428,7 @@ body.modal-open {
 }
 
 .ui-widget.ui-dialog.confirmation-popup .ui-dialog-content.ui-widget-content {
-  padding-bottom: 20px;
+  padding: 40px 60px 20px;
 }
 .ui-widget.ui-dialog.confirmation-popup .popup-content {
   margin-bottom: 40px;
@@ -15438,6 +15438,7 @@ body.modal-open {
 }
 .ui-widget.ui-dialog.confirmation-popup .content-button a {
   text-transform: uppercase;
+  color: #fff;
 }
 
 [class^="icon-"], [class*=" icon-"] {
